[DOC] thesis: add 1 more bibitem

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -7,7 +7,7 @@
   address = {Upper Saddle River, NJ, USA},
 }
 
-@article{BierlaireTT1995,
+@article{journals/laa/BierlaireTT1995,
   author = {M. Bierlaire and Ph.L. Toint and D. Tuyttens},
   title = {On Iterative Algorithms for Linear Least Squares Problems With 
   Bound Constraints},
@@ -277,6 +277,27 @@ TODO: correct the place of publishing of Lele's B. S. Thesis.
   volume = 12,
   year = 1999
 }
+
+@article{journals/acmtms/PaigeS1982,
+  author = {Paige, Christopher C. and Saunders, Michael A.},
+  title = {LSQR: An Algorithm for Sparse Linear Equations and Sparse Least
+  Squares},
+  journal = {ACM Trans. Math. Softw.},
+  issue_date = {March 1982},
+  volume = {8},
+  number = {1},
+  month = mar,
+  year = {1982},
+  issn = {0098-3500},
+  pages = {43--71},
+  numpages = {29},
+  url = {http://doi.acm.org/10.1145/355984.355989},
+  doi = {10.1145/355984.355989},
+  acmid = {355989},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+} 
+
 
 @article{journals/pami/PrinceW90,
   added-at = {2011-11-07T00:00:00.000+0100},
