[DOC] thesis: ens section about GK algorithm

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1738,9 +1738,11 @@ $\widehat{P_{k}} = hull(\widehat{x_{1}}, \ldots, \widehat{x_{k}})$, которо
 увеличивается в $n$ раз, а число условий минимизации является квадратичным. Это
 приводит к тому, что время работы программы является огромным.
 
-
-
-
+Однако данный алгоритм имеет определенное отличие ото всех остальных: все
+обсуждавшиеся алгоритмы предполагали, что восстановлению подлежит главная 
+цель данного набора опорных чисел. Алгоритм Gardner, Milanfar предоставляет 
+возможность восстанавливать не только главную цель, но и многогранник 
+произвольной конфигурации, просто соответствующий данному набору.
 
 \newpage
 \section{Предлагаемый подход}
