[DOC] thesis: begin subsection about new conditions

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1747,6 +1747,9 @@ $\widehat{P_{k}} = hull(\widehat{x_{1}}, \ldots, \widehat{x_{k}})$, которо
 \newpage
 \section{Предлагаемый подход}
 
+\subsection{Наглядная интерпретация условий согласованности Karl, Kulkarni, 
+Verghese, Willsky в двойственной постановке}
+
 \newpage
 \bibliographystyle{plain}
 \bibliography{references}
