[DOC] thesis: begin of section about new method

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1747,6 +1747,26 @@ $\widehat{P_{k}} = hull(\widehat{x_{1}}, \ldots, \widehat{x_{k}})$, которо
 \newpage
 \section{Предлагаемый подход}
 
+В последующих разделах показано, каким образом можно упростить набор условий
+Karl, Kulkarni, Verghese, Willsky используя так называемое преобразование
+двойственности, затем -- набор приемов, который мог бы помочь ускорить алгоритм
+восстановления выпуклого тела применительно к рассматриваемому нами случаю --
+восстановлению многогранника по его теневым проекциям. Основным соображением
+является то, что алгоритмы восстановления можно значительно ускорить, если о
+восстанавливаемом теле имеется некоторая априорная информация.
+
+В данном конкретном случае известна следующая априорная информация:
+
+\begin{enumerate}
+ \item Многие вершины отображаются сразу на последовательности нескольких
+ фотографий
+ \item Для многих классов многогранников заранее известна структура "основных"
+ граней, поскольку существует набор типичных классов драгоценных камней, для
+ которых известна структура и симметрия граней "короны", т. е. верхней части
+ камня.
+\end{enumerate}
+
+
 \subsection{Наглядная интерпретация условий согласованности Karl, Kulkarni, 
 Verghese, Willsky в двойственной постановке}
 
