[DOC] thesis: add duality transformation definition

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -1766,6 +1766,27 @@ Karl, Kulkarni, Verghese, Willsky используя так называемое
  камня.
 \end{enumerate}
 
+\subsection{Преобразование полярной двойственности и его свойства}
+
+В вычислительной геометрии большой популярностью пользуется так называемое
+полярное преобразование, в англоязычной литературе называемое как duality
+tranformation, т. е. "преобразование двойственности". Оно осуществляет
+отображение точек в плоскости и плоскости в точки.
+
+Точки пространства $\mathbb{R}^{3}$ отображаются следующим образом:
+
+\begin{equation}
+ \delta : (a, b, c) \longmapsto a x + b y + c z = 1
+\end{equation}
+
+А плоскости пространства $\mathbb{R}^{3}$ отображаются следущим образом:
+
+\begin{equation}
+ \delta : a x + b y + c z + d = 1 \longmapsto
+ \left(- \frac{a}{d}, - \frac{b}{d}, - \frac{c}{d}\right)
+\end{equation}
+
+
 
 \subsection{Наглядная интерпретация условий согласованности Karl, Kulkarni, 
 Verghese, Willsky в двойственной постановке}
