[DOC] thesis: add 1 more bibitem

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -157,6 +157,14 @@
   year = {2002},
 }
 
+@thesis{thesis/Greschak1985,
+  author = {John P. Greschak},
+  title = {Reconstructing convex sets},
+  type = {PhD thesis},
+  institution = {Massachusetts Institute of Technology},
+  year = {1985}
+}
+
 @article{journals/pami/HallT99,
   added-at = {2011-11-07T00:00:00.000+0100},
   author = {Hall, Peter and Turlach, Berwin A.},
