[DOC] report: fix citations naming and use them

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
@@ -93,6 +93,11 @@ h_{i}^{0})^{2} \to min
 
 где числа $h_{i}^{0}$ есть экспериментальные измерения величин $h_{i}$.
 
+\section{<Временный раздел>}
+
+Источники: \cite{BertsekasTsitsiklis1989, BierlaireTointTuyttens1991,
+CantarellaPiatek2004, ChenDonohoSaunders2001, Golub1965, PaigeSaunders1982,
+Saunders2013}.
 
 \newpage
 \bibliographystyle{plain}
