--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/references.bib
@@ -1,4 +1,4 @@
-@book{Bertsekas:1989:PDC:59912,
+@book{BertsekasTsitsiklis1989,
   author = {Bertsekas, Dimitri P. and Tsitsiklis, John N.},
   title = {Parallel and Distributed Computation: Numerical Methods},
   year = {1989},
@@ -7,7 +7,7 @@
   address = {Upper Saddle River, NJ, USA},
 } 
 
-@article{Bierlaire1991111,
+@article{BierlaireTointTuyttens1991,
   title = "On iterative algorithms for linear least squares problems with bound 
   constraints ",
   journal = "Linear Algebra and its Applications ",
@@ -22,7 +22,7 @@
   author = "M. Bierlaire and Ph.L. Toint and D. Tuyttens"
 }
 
-@article{journals/corr/cs-MS-0408029,
+@article{CantarellaPiatek2004,
   added-at = {2011-12-05T00:00:00.000+0100},
   author = {Cantarella, Jason and Piatek, Michael},
   biburl = 
@@ -40,7 +40,7 @@ non-negative variables},
   year = 2004
 }
 
-@article{Chen:2001:ADB:588736.588850,
+@article{ChenDonohoSaunders2001,
   author = {Chen, Scott Shaobing and Donoho, David L. and Saunders, Michael A.},
   title = {Atomic Decomposition by Basis Pursuit},
   journal = {SIAM Rev.},
@@ -64,7 +64,7 @@ non-negative variables},
   wavelets}
 } 
 
-@article{journals/nm/Golub1965,
+@article{Golub1965,
   year={1965},
   issn={0029-599X},
   journal={Numerische Mathematik},
@@ -79,7 +79,7 @@ non-negative variables},
   language={English}
 }
 
-@article{Paige:1982:LAS:355984.355989,
+@article{PaigeSaunders1982,
   author = {Paige, Christopher C. and Saunders, Michael A.},
   title = {LSQR: An Algorithm for Sparse Linear Equations and Sparse Least 
   Squares},
@@ -99,7 +99,7 @@ non-negative variables},
   address = {New York, NY, USA},
 } 
 
-@article{SaundersPDCO,
+@article{Saunders2013,
   author = {Saunders, Michael A.},
   title = {PDCO - Primal-Dual interior methods},
   year = {2013}
