[DOC] report: add dual problem with U^{T}

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
@@ -78,7 +78,7 @@
 \tableofcontents
 
 \newpage
-\section{Рассматриваемая задача}
+\section{Рассматриваемые задачи}
 \label{sec:problem}
 
 В предыдущем отчете было указано, что задача восстановления многогранника по 
@@ -87,11 +87,71 @@
 квадратов разностей опорных чисел и их экспериментальных измерений:
 
 \begin{equation}
- I(h_{1}, h_{2}, \ldots, h_{n}) = \sum \limits_{i = 1}^{n} (h_{i} - 
-h_{i}^{0})^{2} \to min
+\label{eq:problem1}
+ I(h) = I(h_{1}, h_{2}, \ldots, h_{n}) = ||h - h^{0}||_{2}^{2} =
+ \sum \limits_{i = 1}^{n} (h_{i} - h_{i}^{0})^{2} \to min
 \end{equation}
 
 где числа $h_{i}^{0}$ есть экспериментальные измерения величин $h_{i}$.
+
+При этом требовалось, чтобы вектор опорных чисел удовлетворял условию
+
+\begin{equation}
+\label{eq:problem1-cond}
+ Q h \geq 0
+\end{equation}
+
+где матрица $Q$ представляла собой матрицу коэффициентов линейных неравенств
+следующего типа:
+
+\begin{equation}
+\left|\begin{array}{cc}
+  h_{1} & u_{1}^{T} \\
+  h_{2} & u_{2}^{T} \\
+  h_{3} & u_{3}^{T} \\
+  h_{4} & u_{4}^{T} \\
+\end{array}\right|
+  \left|\begin{array}{cc}
+  1 & u_{1}^{T} \\
+  1 & u_{2}^{T} \\
+  1 & u_{3}^{T} \\
+  1 & u_{4}^{T} \\
+\end{array}\right|
+\geq 0
+\end{equation}
+
+где $u_{i}^{T}$ -- известные опорные направления, а $h_{i}$ -- неизвестные
+опорные числа. Таким образом, матрица $Q$ представляет собой $m \times
+n$-матрицу, причем в каждой ее строке содержится не более 4 ненулевых элементов,
+и число $m$ ее строк не превышает $12 n$ (в соответствии с теоремой Эйлера о
+числе вершин, ребер и граней графа на сфере).
+
+Задачу минимизации (\ref{eq:problem1}) - (\ref{eq:problem1-cond}) можно 
+сформулировать несколько более удобным образом, как это описано, например, в 
+книге \cite{BertsekasTsitsiklis1989}: оптимальное решение задачи
+(\ref{eq:problem1}) можно найти как
+
+\begin{equation}
+\label{eq:problem2}
+ h^{*} = h^{0} - Q^{T} u^{*}
+\end{equation}
+
+где $u^{*}$ есть решение задачи минимизации функционала
+
+\begin{equation}
+\label{eq:problem2-cond}
+ I(u_{1}, u_{2}, \ldots, u_{m}) = ||Q^{T} u - h^{0}||_{2}^{2} \to min
+\end{equation}
+
+при условиях неотрицательности переменных:
+
+\begin{equation}
+ u \geq 0
+\end{equation}
+
+Данный отчет посвящен поиску методов, которые позволили бы решить задачи
+(\ref{eq:problem1}) - (\ref{eq:problem1-cond}) или (\ref{eq:problem2}) -
+(\ref{eq:problem2-cond}) наиболее эффективно.
 
 \section{<Временный раздел>}
 
