[DOC] report: add 1 more bibitem

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/references.bib
@@ -79,6 +79,19 @@ non-negative variables},
   language={English}
 }
 
+@article{Lanczos1950,
+  author = {Lanczos, C.},
+  title = {An iteration method for the solution of the eigenvalue problem of
+  linear differential and integral operators},
+  journal = {J. Res. Natl. Bur. Stand.},
+  year = {1950},
+  issn = {0091-0635},
+  volume = {45},
+  issue = {4},
+  page = {255},
+  publisher = {National Bureau of Standards}
+}
+
 @article{PaigeSaunders1982,
   author = {Paige, Christopher C. and Saunders, Michael A.},
   title = {LSQR: An Algorithm for Sparse Linear Equations and Sparse Least 
