--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
@@ -156,8 +156,8 @@ n$-матрицу, причем в каждой ее строке содержи
 \section{<Временный раздел>}
 
 Источники: \cite{BertsekasTsitsiklis1989, BierlaireTointTuyttens1991,
-CantarellaPiatek2004, ChenDonohoSaunders2001, Golub1965, PaigeSaunders1982,
-Saunders2013}.
+CantarellaPiatek2004, ChenDonohoSaunders2001, Golub1965, Lanczos1950,
+PaigeSaunders1982, Saunders2013}.
 
 \newpage
 \bibliographystyle{plain}
