[DOC] report: add section about normal equations and begin LP

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
@@ -66,9 +66,7 @@
 \usepackage{wasysym}
 
 %opening
-\title{Методы квадратичной минимизации для разреженных матриц с ограничениями 
-типа неравенств \\ Обзор
-материалов и план работы}
+\title{Отчет по методам оптимизации}
 \author{Палачев Илья}
 
 \begin{document}
@@ -78,6 +76,47 @@
 \tableofcontents
 
 \newpage
+\section{Линейное программирование}
+Одним из самых распространенных классов задач оптимизации являются задачи
+\textbf{линейного программирования}. Методы решения этих задач имеют широкое
+приложение в разнообразных прикладных областях науки. Самым распространенным
+методом решения задач линейного программирования является так называемый
+\textbf{симплекс-метод}, который будет далее описан в этом разделе.
+
+\textit{Общая задача линейного программирования} формулируется следующим
+образом.
+
+\begin{equation}
+ J(u) = c_{1} u^{1} + \ldots + c_{n} u^{n} \to min
+\end{equation}
+
+при условиях
+
+\begin{equation}
+ u^{k} \geq 0, \;\;\;\;\; k \in I
+\end{equation}
+
+\begin{equation}
+ \left\{
+  \begin{aligned}
+   a_{11} u^{1} + \ldots + a_{1n} u^{n} \leq 0 \\
+   \ldots \\
+   a_{n1} u^{1} + \ldots + a_{nn} u^{n} \leq 0 \\
+  \end{aligned}
+ \right.
+\end{equation}
+
+\begin{equation}
+ \left\{
+  \begin{aligned}
+   a_{m1} u^{1} + \ldots + a_{mn} u^{n} = 0 \\
+   \ldots \\
+   a_{s1} u^{1} + \ldots + a_{sn} u^{n} = 0 \\
+  \end{aligned}
+ \right.
+\end{equation}
+
+
 \section{Рассматриваемые задачи}
 \label{sec:problem}
 
@@ -152,6 +191,30 @@ n$-матрицу, причем в каждой ее строке содержи
 Данный отчет посвящен поиску методов, которые позволили бы решить задачи
 (\ref{eq:problem1}) - (\ref{eq:problem1-cond}) или (\ref{eq:problem2}) -
 (\ref{eq:problem2-cond}) наиболее эффективно.
+
+\section{Метод нормальных уравнений}
+
+Если говорить о задачах наименьших квадратов вообще, то их можно выделить в
+особый тип задач минимизации. Предположим, что матрица $A \in \mathbb{R}^{m
+\times n}$ и $m > n$. В общем случае невозможно точно решить уравнение
+$A x = b$, поскольку число условий больше числа неизвестных, лучшее что можно
+сделать -- это минимизировать невязку $r = b - A x$. Задачи наименьших
+квадратов формулируются как задачи минимизации евклидовой нормы невязки:
+
+$$
+||r||^{2}_{2} = \langle r, r \rangle \to min
+$$
+
+Один из способов решить задачу наименьших квадратов -- применить к ней прямой
+и стандартный подход. Поскольку известно что $||r||^{2} = ||A x - b||^{2}$, то
+производная по направлению $\partial x$ равна
+
+$$
+\nabla_{x} ||r||^{2} \cdot \partial x = 2 \langle A \partial x, b - A x\rangle =
+2 \partial x^{T} (A^{T} b - A^{T} A x)
+$$
+
+Минимум
 
 \section{<Временный раздел>}
 
