[DOC] report: add definition and theorem

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
@@ -159,7 +159,38 @@
 Можно показать, что каждую из трех задач можно свести к любой другой с помощью
 введения дополнительных переменных. На практике как правило к этому стараются
 не прибегать, поскольку рост числа переменных обходится дорого с вычислительной 
-точки зрения.
+точки зрения. Далее мы будем рассматривать методы решения канонической задачи.
+
+\begin{SmartDefinition}
+ Пусть $U$ -- выпуклое множество в $\mathbb{R}^{n}$. Тогда $v \in U$ называется
+ угловой точкой множества $U$, если представление
+ $v = \alpha v_{1} + (1 - \alpha) v_{2}$ при $v_{1}, v_{2} \in U$ и
+ $0 < \alpha < 1$ возможно лишь при $v_{1} = v_{2}$. Иначе говоря $v$ -- угловая
+ точка множества $U$, если она не является внутренней точкой никакого отрезка,
+ принадлежащего множеству $U$.
+\end{SmartDefinition}
+
+В случае канонической задачи множество $U$ представляет из себя следующее:
+
+\begin{equation}
+\label{eq:canon-cond}
+ U = \{u \in \mathbb{R}^{n} \;\; | \;\; u \geq 0, A u = b\}
+\end{equation}
+
+Критерий того, что точка является угловой точкой множества определяет следующая
+теорема.
+
+\begin{SmartTheorem}
+ Пусть множество определяется условиями (\ref{eq:canon-cond}), $A \neq 0$,
+ $r = rang A$ -- ранг матрицы $A$. Для того, чтобы точка
+ $v = (v_{1}, v_{2}, \ldots, v_{n})$ была угловой точкой множества $U$,
+ необходимо и достаточно, чтобы существовали набор из $r$ номеров
+ $j_{1}, \ldots, j_{r}$ ($1 \leq j_{l} \leq n, l = 1, \ldots, r$) таких, что
+ \begin{equation}
+  A_{j_{1}} v^{j_{1}} + \ldots + A_{j_{r}} v^{j_{r}} = b;
+  \;\; v^{j} = 0, j \neq j_{l}, l = 1, \ldots, r
+ \end{equation}
+\end{SmartTheorem}
 
 
 
@@ -170,7 +201,7 @@
 
 В предыдущем отчете было указано, что задача восстановления многогранника по
 набору его теневых контуров сводится в том или ином виде к задаче квадратичной
-минимизации. В рассматриваемом случае функционал представлял из собой сумму
+минимизации. В рассматриваемом случае функционал представлял из себя сумму
 квадратов разностей опорных чисел и их экспериментальных измерений:
 
 \begin{equation}
