[DOC] report: complete linear programming section

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
@@ -161,9 +161,19 @@
 не прибегать, поскольку рост числа переменных обходится дорого с вычислительной 
 точки зрения. Далее мы будем рассматривать методы решения канонической задачи.
 
+Из геометрических соображений видно, что множество ограничений $U$ является
+многогранным, причем либо ограниченным, либо неограниченным. Если рассмотреть
+поверхности уровня минимизируемого функционала, которые являются аффинными
+подпространствами в $\mathbb{R}^{n}$, то пересекая их с множеством $U$, мы
+сможем выявить поверхность самого низкого уровня. На ней и будет достигаться
+минимум функционала. Это поверхность будет являться опорной к множеству
+ограничений, поэтому в ее пересечении с $U$ будет содержаться хотя бы одна 
+вершина $U$. В теории линейного программирования такие вершины принято
+называть \textit{угловыми}.
+
 \begin{SmartDefinition}
  Пусть $U$ -- выпуклое множество в $\mathbb{R}^{n}$. Тогда $v \in U$ называется
- угловой точкой множества $U$, если представление
+ \textbf{угловой точкой} множества $U$, если представление
  $v = \alpha v_{1} + (1 - \alpha) v_{2}$ при $v_{1}, v_{2} \in U$ и
  $0 < \alpha < 1$ возможно лишь при $v_{1} = v_{2}$. Иначе говоря $v$ -- угловая
  точка множества $U$, если она не является внутренней точкой никакого отрезка,
@@ -187,12 +197,193 @@
  необходимо и достаточно, чтобы существовали набор из $r$ номеров
  $j_{1}, \ldots, j_{r}$ ($1 \leq j_{l} \leq n, l = 1, \ldots, r$) таких, что
  \begin{equation}
+ \label{eq:vertex-def}
   A_{j_{1}} v^{j_{1}} + \ldots + A_{j_{r}} v^{j_{r}} = b;
   \;\; v^{j} = 0, j \neq j_{l}, l = 1, \ldots, r
  \end{equation}
 \end{SmartTheorem}
 
+В последнем определении существенно, что в (\ref{eq:vertex-def}) берутся ровно
+$r$ векторов $A_{j_{1}}, \ldots, A_{j_{r}}$ -- ровно такое число векторов,
+каков ранг матрицы $A$.
 
+\begin{SmartDefinition}
+ Систему векторов $A_{j_{1}}, \ldots, A_{j_{r}}$, входящих в первое из равенств
+ (\ref{eq:vertex-def}), называют \textit{базисом угловой точки} $v$, а
+ соответствующие им величины $v^{j_{1}}, \ldots, v^{j_{r}}$ --
+ \textit{базисными координатами} угловой точки $v$. Если все базисные 
+ координаты угловой точки положительны, то такую угловую точку называют
+ \textit{невырожденной}. В противном случае -- \textit{вырожденной}. При
+ фиксированном базисе $A_{j_{1}}, \ldots, A_{j_{r}}$ переменные
+ $u^{j_{1}}, \ldots, u^{j_{r}}$ называются \textit{базисными переменными}
+ угловой точки, а остальные $u^{j}$ -- \textit{небазисными (свободными)
+ переменными}.
+\end{SmartDefinition}
+
+Для того чтобы избежать трудоемкого полного перебора всех угловых точек
+множества ограничений $U$, выбирают одну, от нее переходят к другой, у которой
+значение функционала меньше и т. д. В этом и состоит симплекс-метод.
+
+Далее будем считать, что $m = n$ и все уравнения ограничений, линейно зависимые
+от других, выброшены.
+
+Пусть нам известна угловая точка $v$. Пусть $\overline{u} = (u_{1},
+u_{r})$ -- вектор, составленный из базисных переменных угловой точки
+$v$. Перепишем систему ограничений в следующем виде:
+
+\begin{equation}
+ B \overline{u} + A_{r + 1} u^{r + 1} + \ldots + A_{n} u^{n} = b
+\end{equation}
+
+Домножим эту систему слева на $B^{-1}$, базисные переменные через
+небазисные и получим следующее:
+
+\begin{equation}
+\label{eq:nonfree-via-free}
+ \begin{aligned}
+  u^{1} = v^{1} - \gamma_{1, r + 1} u^{r + 1} - \ldots - \gamma_{1 k} u^{k} -
+  \ldots - \gamma_{1 n} u^{n} \\
+  \ldots \\
+  u^{i} = v^{i} - \gamma_{i, r + 1} u^{r + 1} - \ldots - \gamma_{i k} u^{k} -
+  \ldots - \gamma_{i n} u^{n} \\
+  \ldots \\
+  u^{r} = v^{r} - \gamma_{r, r + 1} u^{r + 1} - \ldots - \gamma_{r k} u^{k} -
+  \ldots - \gamma_{r n} u^{n} \\
+ \end{aligned}
+\end{equation}
+
+Подставив эти выражения в формулу функционала, получим:
+
+\begin{equation}
+ J(u) = J(v) - \sum \limits_{i = r + 1}^{n} \Delta_{i} u^{i}
+\end{equation}
+
+где
+
+\begin{equation}
+ \Delta_{i} = \langle \overline{c}, B^{-1} A_{i} \rangle =
+ \sum \limits_{s = 1}^{r} c_{s} \gamma_{s i} - c_{i}
+\end{equation}
+
+Запишем величины $\gamma_{s k}, v^{i}, \Delta_{i}$ в так называемую
+симплекс-таблицу:
+
+\begin{table}[hh]
+\caption{Симплекс-таблица}
+\label{simplex-table}
+\begin{center}
+\begin{tabular}{|p{2cm}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|p{2cm}|}
+\hline
+Базисные \par переменные & $u^{1}$ & $\ldots$ & $u^{i}$ & $\ldots$ &
+$u^{s}$ & $\ldots$ & $u^{r}$ & $u^{r + 1}$ & $\ldots$ & $u^{k}$ & $\ldots$ &
+$u^{j}$ & $\ldots$ & $u^{n}$ & Свободные \par члены \\
+\hline
+$u^{1}$ & 1 & $\ldots$ & 0 & $\ldots$ & 0 & $\ldots$ & 0 & $\gamma_{1, r + 1}$ &
+$\ldots$ & $\gamma_{1k}$ & $\ldots$ & $\gamma_{1j}$ & $\ldots$ & $\gamma_{1n}$
+& $v^{1}$ \\
+$\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ &
+$\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ &
+$\ldots$ & $\ldots$ \\
+$u^{i}$ & 0 & $\ldots$ & 1 & $\ldots$ & 0 & $\ldots$ & 0 & $\gamma_{i, r + 1}$ &
+$\ldots$ & $\gamma_{i k}$ & $\ldots$ & $\gamma_{i j}$ & $\ldots$ &
+$\gamma_{i n}$ & $v^{i}$ \\
+$\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ &
+$\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ &
+$\ldots$ & $\ldots$ \\
+$u^{s}$ & 0 & $\ldots$ & 0 & $\ldots$ & 1 & $\ldots$ & 0 & $\gamma_{s, r + 1}$ &
+$\ldots$ & $\gamma_{s k}$ & $\ldots$ & $\gamma_{s j}$ & $\ldots$ &
+$\gamma_{s n}$ & $v^{s}$ \\
+$\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ &
+$\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ & $\ldots$ &
+$\ldots$ & $\ldots$ \\
+$u^{r}$ & 0 & $\ldots$ & 0 & $\ldots$ & 0 & $\ldots$ & 1 & $\gamma_{r, r + 1}$ &
+$\ldots$ & $\gamma_{r k}$ & $\ldots$ & $\gamma_{r j}$ & $\ldots$ &
+$\gamma_{r n}$ & $v^{r}$ \\
+\hline
+Функция & 0 & $\ldots$ & 0 & $\ldots$ & 0 & $\ldots$ & 0 & $\Delta_{r + 1}$ &
+$\ldots$ & $\Delta_{k}$ & $\ldots$ & $\Delta_{j}$ & $\ldots$ & $\Delta_{n}$ &
+$J(v)$ \\
+\hline
+\end{tabular}
+\end{center}
+\end{table}
+
+Опишем коротко алгоритм линейного программирования. Допустим, что множество $U$
+непусто и нам уже известна некоторая угловая точка $v$.
+
+Будем менять по очереди небазисные переменные, тогда функционал будет меняться
+по формуле
+
+\begin{equation}
+ J(u) = J(v) - \Delta_{k} u^{k}
+\end{equation}
+
+Будем искать такой номер $k$ ($r + 1 \leq k \leq n$) и такую величину $u^{k}$,
+чтобы точка $w$, полученная по формулам (\ref{eq:nonfree-via-free}) для набора
+свободных переменных $0, \ldots, 0, u_{k}, 0, \ldots, 0$, удовлетворяла
+условиям связи $A w = b$. В зависимости от знаков величин $\gamma_{s k},
+\Delta_{i}$ выделяют три возможных случая:
+
+\textbf{Случай 1.} $\Delta_{i} \leq 0$ для всех $i = r + 1, \ldots, n$. Тогда 
+можно показать, что $v$ -- точка минимума функционала.
+
+\textbf{Случай 2.} Существует такой номер $k$ ($r + 1 \leq k \leq n$), что 
+$\Delta_{k} > 0$, но все $\gamma_{i k} \leq 0$ для всех $i = 1, \ldots, r$.
+Тогда можно показать, что функционал не является ограниченным снизу на $U$.
+
+\textbf{Случай 3.} Существуют номера $k$ ($r + 1 \leq k \leq n$),
+$i$ ($1 \leq i \leq r$) такие что $\Delta_{k} > 0$ и $\gamma_{i k} > 0$.
+Для того чтобы обеспечить выполнение условий связи полагают
+$u^{k} = v_{s} / \gamma_{s k}$, где индекс $s$ выбран следующим образом:
+
+\begin{equation}
+ \operatornamewithlimits{min}_{i \in I_{k}} v^{i} / \gamma_{i k} =
+ v_{s} / \gamma_{s k}
+\end{equation}
+
+Соответствующую величину $\gamma_{s k}$ называют \textit{разрешающим элементом}
+симплекс-таблицы.
+
+Можно показать что полученная таким образом точка $w$ является угловой, 
+реализует меньшее значение функционала, чем точка $v$, и что вектора
+$A_{1}, \ldots, A_{s - 1}, A_{s + 1}, \ldots, A_{r}, A_{k}$ образуют ее базис.
+После этого пересчитывают величины симплекс-таблицы по тем же принципам,
+которые описаны выше, и вновь ищут следующую угловую точку.
+
+Описанная выше процедура работает для случая, когда точка $v$ является
+невырожденной. Если же она вырождена, то во время работы алгоритма может
+произойти \textit{зацикливание}. Для того, чтобы его избежать, применяют
+специальный метод, называемый \textbf{антициклином}. Он состоит в том, что
+симплекс-таблица расширяется дополнительными столбцами единичной матрицы
+порядка $r \times r$. На каждом шаге эти столбцы преобразуются по тем же
+правилам, что и обычные. В случае вырожденной угловой точки эти столбцы
+позволяют выбрать такой особый базис угловой точки $v$ (которых, вообще говоря,
+должно быть несколько), что зацикливания можно избежать.
+
+Указанные выше построения основывались на том, что некоторая угловая точка
+множества $U$ уже известна. Для того, чтобы найти первую угловую точку также
+применяют особый метод.
+
+А именно, множество переменных $u = (u^{1}, \ldots, u^{n})$ расширяется
+дополнительными переменными $w = (u^{n + 1}, \ldots, u^{n + m})$ и в
+пространстве $\mathbb{R}^{n + m}$ относительно переменных
+$z = (u, w)^{T}$ рассматривают следующую каноническую задачу линейного
+программирования:
+
+\begin{equation}
+\begin{aligned}
+ J_{1}(z) = u^{n + 1} + \ldots + u^{n + m} \to min \\
+ z \in Z = \{ z \in \mathbb{R}^{n + m} | z \geq 0,
+ C z \equiv A u + w = b \} \\
+\end{aligned}
+\end{equation}
+
+Оказывается, что для нее точка $z_{0} = (0, b) \geq 0$ является угловой точкой
+множества $Z$. Очевидно, что $J_{1}(z) \geq 0$ при всех $z \in Z$. Поэтому
+алгоритм симлекс-метода обязательно сходится. Пусть он сойдется к некоторой
+точке $z_{*}$. Тогда можно показать, что если $J_{1}(z_{*}) > 0$, то
+$U = \varnothing$, а если $J_{1}(z_{*}) = v^{n + 1} + \ldots + v^{n + m} = 0$, 
+так что $z = (v, 0)$, где $v$ -- угловая точка множества $U$.
 
 
 
