[DOC} report: add 1 more bibitem (Vasiliev)

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/references.bib
@@ -117,3 +117,13 @@ non-negative variables},
   title = {PDCO - Primal-Dual interior methods},
   year = {2013}
 }
+
+@book{Vasilev1980,
+    author = "Васильев, Ф.П.",
+    title = "Численные методы решения экстремальных задач",
+    year = "1980",
+    pages = "520",
+    publisher = "Москва",
+    address = "Москва",
+    language = "russian"
+}
