[DOC] report: begin PDCO section

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/i.palachev_ReportAboutOptimization.tex
@@ -674,8 +674,6 @@ $z = w + \alpha_{0} e_{*}$, где $\alpha_{0}$ -- достаточно мало
 
 
 
-
-
 \section{Рассматриваемые задачи}
 \label{sec:problem}
 
@@ -774,6 +772,126 @@ $$
 $$
 
 Минимум
+
+\section{PDCO -- первично-двойственный метод выпуклой оптимизации}
+
+PDCO (первично-двойственный метод выпуклой оптимизации) -- это библиотека на 
+Matlab  для решения задач следующего вида:
+
+\begin{equation}
+ \begin{aligned}
+ \phi(x) \to min \\
+ Ax = b, \;\;\; l \leq x \leq u \\
+ \end{aligned}
+\end{equation}
+
+Где $\phi(x)$ есть выпуклая функция с известным градиентом $g(x)$ и гессианом
+$H(x)$, а $A \in \mathbb{R}^{m \times n}$. К такому формату условий могут быть 
+приведены любые линейные условия. Например, двусторонние условия
+$\alpha \leq a^{T} \overbrace{x} \leq \beta$ следует переформулировать как
+$a^{T} \overbrace{x} - \xi = 0, \; \alpha \leq \xi \leq \beta$, где 
+$\overbrace{x}$ и $\xi$ суть две разные части вектора $x$.
+
+Для того чтобы допускалось решение задач наименьших квадратов, и для того чтобы
+обеспечить единственность первичного и двойственного решения (и для повышения
+стабильности), в реальности PDCO производит решение регуляризованной задачи:
+
+\begin{equation}
+ \begin{aligned}
+  \phi(x) + \frac{1}{2}||D_{1} x||^{2} + \frac{1}{2}||r||^{2} \to \min \\
+  A x + D_{2} r = b, \;\;\; l \leq x \leq u
+ \end{aligned}
+\end{equation}
+
+где $D_{1}, D_{2}$ суть фиксированные положительно определенные диагональные
+матрицы. Диагональные элементы $D_{1}$ обычно полагают малыми ($10^{-3}$ или
+$10^{-4}$). Аналогично поступают и с матрицей $D_{2}$, если условия связи
+должны быть выполнены с относительно большой точностью. Для решения задач
+наименьших квадратов некоторые диагональные элементы матрицы $D_{2}$ полагаются
+равными 1. Заметим, что некоторые элементы векторов $l$ и $u$ могут быть 
+равными $-\infty$ и $+\infty$ соответственно, но предполагается, что в матрицах
+$A, b, D_{1}, D_{2}$ нет больших чисел. Если $||D_{2}||$ есть малое число,
+ожидается, что матрица $A$ является недо-определенной ($m < n$). Если
+$D_{2} = I$, матрица $A$ может иметь любую форму.
+
+\subsection{Барьерный подход}
+Во-первых, вводятся фиктивные переменные $x_{1}$ и $x_{2}$ для того, чтобы
+преобразовать задачу к задаче с условиями неотрицательности:
+
+\begin{equation}
+ \label{eq:co}
+ \begin{aligned}
+  \phi(x) + \frac{1}{2}||D_{1} x||^{2} + \frac{1}{2}||r||^{2} \to \min \\
+  A x + D_{2} r = b \\
+  x - x_{1} = l \\
+  x + x_{2} = u \\
+  x_{1}, x_{2} \geq 0 \\
+ \end{aligned}
+\end{equation}
+
+Затем условия неотрицательности заменяются логарифмической барьерной функцией, в
+ результате чего получается последовательность выпуклых подзадач с 
+уменьшающимися величинами $\mu$ ($\mu > 0$)
+
+\begin{equation}
+ \label{eq:co-mu}
+ \begin{aligned}
+  \phi(x) + \frac{1}{2}||D_{1} x||^{2} + \frac{1}{2}||r||^{2} -
+  \mu \sum \limits_{j = 1}{n} ln([x_{1}]_{j} [x_{2}]_{j}) \to min \\
+  A x + D_{2} r = b \;\;\;\;\;\;\; : y\\
+  x - x_{1} = l \;\;\;\;\;\;\; : z_{1}\\
+  -x - x_{2} = -u \;\;\;\;\;\;\; : z_{2}\\
+ \end{aligned}
+\end{equation}
+
+где $y, z_{1}, z_{2}$ обозначают двойственные переменные для соответствующих
+условий. При $\mu > 0$ большая часть переменных являются строго положительными:
+$x_{1}, x_{2}, z_{1}, z_{2} > 0$ (исключения возникают, когда $l_{j} = -\infty$
+или $u_{j} = \infty$ -- тогда соответствующее уравнение отбрасывается и
+$j$-я компонента векторов $x_{1}$ и $x_{2}$ не существуют).
+
+Условия Каруша-Куна-Таккера для барьерных подхадач включают в себя три 
+\textit{первичных} уравнения из (\ref{eq:co-mu}), а также четыре 
+\textit{двойственных} уравнения, которые состоят в том, что функционал
+подзадачи является линейной комбинацией градиента и первичных условий:
+
+\begin{equation}
+ \begin{aligned}
+  A x + D_{2} r = b \\
+  x - x_{1} = l \\
+  -x - x_{2} = -u \\
+  A^{T} y + z_{1} - z_{2} = g(x) + D_{1}^{2} x \;\;\;\;\;\; :x \\
+  D_{2} y = r \;\;\;\;\;\; :r \\
+  X_{1} z_{1} = \mu e \;\;\;\;\;\; :x_{1} \\
+  X_{2} z_{2} = \mu e \;\;\;\;\;\; :x_{2} \\
+ \end{aligned}
+\end{equation}
+
+где $X_{1} = diag(x_{1}), X_{2} = diag(x_{2})$ (аналогичные обозначения приняты
+и для $Z_{1}, Z_{2}$ далее). Последние два уравнения часто называют
+возмущенными условиями сопряженности. Изначально они получаются в несколько
+ином виде. Двойственное уравнение для $x_{1}$ в действительности представляет
+из себя
+
+\begin{equation}
+ -z_{1} = \nabla(-\mu ln(x_{1})) = -\mu X_{1}^{-1} e
+\end{equation}
+
+где $e$ -- вектор, составленный из единиц. Следовательно, из $x_{1} > 0$
+следует что $z_{1} > 0$, и умножение на матрицу $-X_{1}$ дает эквивалентное
+уравнение, приведенное выше: $X_{1} z_{1} = \mu e$.
+
+\subsection{Метод Ньютона}
+
+Далее переменные $r = D_{2} y$ исключаются и применяется метод Ньютона:
+
+\begin{equation}
+ \begin{aligned}
+  A(x + \Delta x) + D_{2}^{2} (y + \Delta y) = b \\
+ \end{aligned}
+\end{equation}
+
+
 
 \section{<Временный раздел>}
 
