[DOC] report: add comment about barrier approach

--- a/Documentation/i.palachev/Thesis/ReportAboutOptimization/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutOptimization/references.bib
@@ -118,6 +118,11 @@ non-negative variables},
   year = {2013}
 }
 
+@article{PDCO,
+  title = {PDCO convex optimization software. 
+  http://www.stanford.edu/group/SOL/software.html}
+}
+
 @book{Vasilev1980,
     author = "Васильев, Ф.П.",
     title = "Численные методы решения экстремальных задач",
